# eiho_company_webpage_new

./: president_message.html  pyproject.toml  requirements.txt  test.html  vercel.json
_lockfix/: readme.docx
api/: index.py
backend/: .env.simple  README.md  eiho.db  requirements.txt  run.sh  run_windows.bat
backend/app/: __init__.py  admin_views.py  auth.py  crud.py  db.py  github_storage.py  mail.py  main.py  models.py  schemas.py
backend/app/templates/: admin_home.html  login.html  news_detail.html  news_list.html  president_message.html  service_detail.html
css/: main.css
js/: home-data.js  main.js
