[project]
name = "eiho-company-webpage"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.36",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "jinja2==3.1.4",
    "itsdangerous==2.2.0",
    "requests==2.32.3",
    "psycopg2-binary==2.9.9",
    "python-dotenv>=1.0.0",
]
